Update JDK